Fix z-index issue in full asset viewer More translation work

--- a/dev/scss/partial/_fullAssetViewer.scss
+++ b/dev/scss/partial/_fullAssetViewer.scss
@@ -14,7 +14,7 @@
 
 	&.active {
 		opacity: 1;
-		z-index: 999;
+		z-index: 1001;
 	}
 
 	img{
